# myApp

./: .gitignore  GitLab.md  floofy-wishing-hare.md  index.html  package-lock.json  package.json  vite.config.ts  产品初始文档.md  体验优化.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  persist.rs  state.rs
src-tauri/src/clients/: github_client.rs  http_client.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: commit.rs  mod.rs  repo.rs
src-tauri/src/providers/: github_provider.rs  gitlab_provider.rs  mod.rs  provider_trait.rs
src-tauri/src/services/: auth_service.rs  commit_service.rs  mod.rs  repo_service.rs
src/api/: tauri.ts
src/pages/: CommitDetailPage.tsx  CommitListPage.tsx  LoginPage.tsx  RepoDetailPage.tsx  RepoListPage.tsx
src/store/: useAppStore.ts
src/types/: index.ts
