[package]
name = "myapp"
version = "0.1.0"
description = "A Tauri App for viewing GitHub repositories"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
percent-encoding = "2"
dirs = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
